intégration du html dans le main et proposition de fond

--- a/styleErgo.css
+++ b/styleErgo.css
@@ -6,6 +6,16 @@ body
 	color : darkblue;
 	font-size: 2em;
 }
+#article
+{
+background-color: rgba(176,207,235,0.4);
+display: flow-root;
+}
+
+body img
+{
+    vertical-align: middle;
+}
 
 h1
 {
