--- a/styleErgo.css
+++ b/styleErgo.css
@@ -1,15 +1,23 @@
 body
 {
-	background-image : url(images/carteBack3.png);
+	background-image : url(images/carteBack2.png);
 	background-attachment: fixed;
 	background-color: rgba(255, 255, 255, 0.1);
-	color : darkblue;
+	color : black;
 	font-size: 2em;
 }
 
 h1
 {
 	text-align: center;
+    font-style: bold;
+}
+
+img{
+	display:block;
+	width:auto;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 footer
