--- a/styleErgo.css
+++ b/styleErgo.css
@@ -1,15 +1,18 @@
 body
 {
-	background-image : url(images/carteBack2.png);
-	background-attachment: fixed;
-	background-color: rgba(255, 255, 255, 0.1);
-	color : black;
-	font-size: 2em;
+    background-image : url(images/carteBack2.png);
+    background-attachment: fixed;
+    background-color: rgba(255, 255, 255, 0.1);
+    color : black;
+    font-size: 2em;
 }
 #article
 {
 background-color: rgba(176,207,235,0.7);
 display: flow-root;
+padding: 0% 5% 0% 5%;
+text-align: justify;
+margin: 0% 5% 0% 5%;
 }
 
 body img
@@ -19,22 +22,27 @@ body img
 
 h1
 {
-	text-align: center;
+    text-align: center;
     font-style: bold;
 }
 
 img{
-	display:block;
-	width:auto;
-	margin-left:auto;
-	margin-right:auto;
+    display:block;
+    width:auto;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+ul img{
+    display:inline;
+    text-align: middle;
 }
 
 footer
 {
-	clear:both;
-	text-align: center;
+    clear:both;
+    text-align: center;
     font-size: 70%;
-	font-style: italic;
-	margin-top: 5pt;
+    font-style: italic;
+    margin-top: 5pt;
 }
